# bucket-o-slop

./: .eslintrc.json  .gitignore  .prettierignore  .sb_config.json  README.md  package.json  pyproject.toml
.github/workflows/: slopmop-sarif-demo.yml  slopmop-sarif.yml
js-tests/: calculator.test.js  string-utils.test.js
src/: __init__.py  calculator.py  duplicate_block.py  utils.py
tests/: __init__.py  test_calculator.py  test_utils.py
