[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bucket-o-slop"
version = "0.1.0"
description = "Integration test target for slop-mop"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
